# snake-spectacle

./: .env  .gitignore  AGENTS.md  Makefile  openapi.yaml  package.json  vitest.config.ts
backend/: .env  pyproject.toml
backend/app/: auth.py  database.py  db_models.py  main.py  models.py  store.py
backend/app/routers/: auth.py  games.py  scores.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_scores.py
backend/tests_integration/: conftest.py  test_flows.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/lib/: snake-engine.ts
frontend/src/lib/__tests__/: snake-engine.test.ts
frontend/src/routes/: __root.tsx  auth.tsx  leaderboard.tsx  spectate.$userId.tsx
frontend/src/services/: ApiGameService.ts  GameService.ts  index.ts  types.ts
src/: routeTree.gen.ts
src/components/: SnakeBoard.tsx
src/contexts/: AuthContext.tsx
src/hooks/: use-snake-game.ts
src/routes/: index.tsx  play.tsx  spectate.index.tsx
src/services/: MockGameService.ts  index.ts
src/services/__tests__/: MockGameService.test.ts
