[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_integration"]
